<resources>
    <string name="app_name">Offline Homework Planner</string>
    <string name="title_home">Home</string>
    <string name="title_notes">Notes</string>
    <string name="title_homework">Homework</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start_time">Start time</string>
    <string name="end_time">End time</string>
    <string name="name">Name</string>
    <string name="sat_abbrev">S</string>
    <string name="mon_abbrev">M</string>
    <string name="sun_abbrev">S</string>
    <string name="tue_abbrev">T</string>
    <string name="wed_abbrev">W</string>
    <string name="thu_abbrev">T</string>
    <string name="fri_abbrev">F</string>
    <string name="save">Save</string>
    <string name="days">Days</string>
    <string name="title">Title</string>
    <string name="due_date">Due Date</string>
    <string name="select_class">Select Class</string>
    <string name="invalid_due_date">Please select valid due date.</string>
    <string name="invalid_start_end">Please select valid start and end times.</string>
    <string name="description">Description</string>
    <string name="color">Color</string>
    <string name="edit">Edit</string>
    <string name="archive">Archive</string>
    <string name="unarchive">Unarchive</string>
    <string name="delete">Delete</string>
    <string name="complete">Complete</string>
    <string name="archives">Archives</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="settings">Settings</string>
    <string name="navigation_header">Prototype Planner</string>
    <string name="create">Create</string>
    <string name="invalid_title">Please input a title.</string>
    <string name="completed_homework">Completed Homework</string>
    <string name="uncomplete">Uncomplete</string>
    <string name="saved_message">Notes are autosaved upon closing, although this button manually saves just in case</string>
    <string name="delete_all">Delete Completed Homework</string>
    <string name="complete_all">Complete All Homework</string>
    <string name="archived_classes_title">Archived Classes</string>
    <string name="classes_title">Classes</string>
    <string name="completed_homework_title">Completed Homework</string>
    <string name="homework_title">Homework Items</string>
    <string name="max_title_length">Max title length is 30 characters</string>
    <string name="i_before_e">"I" before "E" except after "C".</string>
</resources>
